# simplified-VPN-test-task

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: Dockerfile
src/base/: urls.py
src/base/settings/: base.py
src/vpn/: admin.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py
src/vpn/management/commands/: create_admin.py
src/vpn/migrations/: 0001_initial.py  0002_site_data_volume_site_transitions_count_and_more.py  0002_user_bio.py
src/vpn/templates/: base.html  create_site.html  edit_profile.html  home.html  login.html  navbar.html  profile.html  register.html  site_detail.html
